--- a/app/journals/templates/home.html
+++ b/app/journals/templates/home.html
@@ -4,7 +4,7 @@
     <div class="card" style="max-width: 400px; border: 3px solid white;">
       <div class="card-body">
         <h1 class="cover-heading text-center">Digital Journal</h1>
-        <p class="cover-text text-center">A digital journaling application by Team Violet</p>
+        <p class="cover-text text-center">A digital journaling application by Team Charlie</p>
         <div class="text-center">
           <a href='{% url 'sign_up' %}' class="btn btn-lg btn-secondary">Sign up</a>
           <a href='{% url 'log_in' %}' class="btn btn-lg btn-secondary">Log in</a>
